<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_start">Start</string>
    <string name="menu_info">Info</string>
    <string name="menu_timelaps">Time laps</string>
    <string name="menu_movies">Movies</string>
    <string name="back">Back</string>
    <string name="settings_title">SETTINGS</string>
    <string name="photos_interval">Take photos every (sec)</string>
    <string name="max_duration">Stop After (hours)</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="photos_resolution">Video resolution</string>
    <string name="start_delay">Start delay (sec)</string>
    <string name="choose_resolution">RESOLUTION</string>
    <string name="starting_in">STARTING IN</string>
    <string name="white_balance">White balance</string>
    <string name="focus_mode">Focus mode</string>
    <string name="color_effect">Color effect</string>
    <string name="flash_mode">Flash mode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_remove_all">Are you sure you want to remove all timelapse videos?</string>
    <string name="confirm_remove_video">Are you sure you want to remove this video?</string>
    <string name="video_created_confirm">Time Lap Created!</string>
    <string name="all_videos_removed">All timelapse video removed!</string>
    <string name="no_timelapse_to_remve">There are no timelapse videos to delete!</string>
    <string name="frames_info">Frames:</string>
    <string name="minutes_info">Minutes:</string>
    <string name="title_activity_movies">MOVIES</string>
    <string name="movie_removed">Timelap removed!</string>
    <string name="title_activity_movie_single"></string>
    <string name="title_activity_info">INFO</string>
    <string name="greetings">Greetings! First of all thank you for buying my app. Below you can find a few notes regarding its usage.</string>
    <string name="settings_usage">From the home menu open "Settings", edit your preferences (frame rate, stop after, keep screen on, resolution,  start delay, etc&#8230;).</string>
    <string name="settings_usage_note">Note! If choose to keep the screen ON, the battery will drain faster.</string>
    <string name="record_usage">Start recording from home menu/Play Button. Note that before the actually recording starts you can stop the process from the delay menu.</string>
    <string name="record_usage_first_note">Note! When recording starts, do not close the app, you can close the screen or leave it, the screen will close by itself.</string>
    <string name="record_usage_second_note">Note! If you change phone orientation during recording the app will stop current time lap. You can create either portrait or landscape time laps but not both in the same time.</string>
    <string name="view_usage">You can view, share and remove all time laps from home menu/Movies. You can also access all created time laps within your gallery under InTimeVideos folder.</string>
    <string name="delete_usage_note">Note! When you remove a time lap from within the app, on some devices it is possible that you will still see its thumbnail in Gallery, however this will not show up anymore if you reboot the phone or trigger a media scan.</string>
    <string name="recording_info_note">Note! While recording, you can see how many frames have been captured and for how long (in minutes) the recording was started.</string>
    <string name="share_app">SHARE</string>
    <string name="no_timelaps">There are no time laps at this time.</string>
    <string name="share_app_text">It will really help me quit my boring office job!</string>            

</resources>
